# hashkitcxx

./: .clang-format  .clang-tidy  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: WarningAsError.cmake  WarningLevel.cmake
hashkitcxx/: hash_sha2.cpp  hash_sha2.hpp  hash_utils.hpp
samples/: CMakeLists.txt  file2sha.cpp  input_hash.cpp
tests/: CMakeLists.txt  common.hpp  sha2.hpp  test.cpp
tools/dev/: configure_mingw-w64.bat  configure_ninja_llvm.bat  configure_unix.sh  configure_vs.bat  llvm_path.py  run_clang-tidy.bat
